kubernetes/ingress/picup-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picup-ingress
  namespace: picup
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/album
            pathType: Prefix
            backend:
              service:
                name: storage-api
                port:
                  number: 30884
          - path: /api/member
            pathType: Prefix
            backend:
              service:
                name: storage-api
                port:
                  number: 30884
